# NexusBridge

./: .gitignore  CONTRIBUTING.md  README.md  complie.py  pyproject.toml
example/binance/: loan_data.py  rest_um_api.py  ws_subscribe_agg_trade.py
example/bybit/: server_time.py  ws_subscribe_orderbook.py
example/okx/: get_loan.py  place_order.py
nexus/: base.py  config.py  utils.py
nexus/binance/: authentication.py  base.py  constants.py
nexus/binance/cm/: __init__.py  account.py  market_data.py  trade.py  user_data_stream.py  web_socket_stream.py
nexus/binance/derivatives/: __init__.py
nexus/binance/margin/: __init__.py  account.py
nexus/binance/pm/: __init__.py  account.py  trade.py
nexus/binance/spot/: __init__.py  account.py  general.py  market_data.py  trading.py  user_data_stream.py  web_socket_stream.py  ws_api.py
nexus/binance/um/: __init__.py  account.py  convert.py  market_data.py  trade.py  user_data_stream.py  web_socket_stream.py
nexus/bybit/: constants.py  restapi.py  wsapi.py
nexus/bybit/api/: __init__.py  account.py  asset.py  market.py  position.py  trade.py
nexus/jupiter/: __init__.py  jupiter.py
nexus/okx/: constants.py  restapi.py  schema.py  test_restapi.py  wsapi.py
test/: __init__.py
test/bybit/: test_account.py  test_asset.py  test_market.py  test_position.py  test_trade.py  test_wsapi.py
test/okx/: test_algo_trading.py  test_copy_trading.py  test_grid_trading.py  test_market_data.py  test_public_data.py  test_recurring_buy.py  test_signal_bot_trading.py  test_trade.py  test_trading_account.py  test_wsapi.py
(+58 files in other folders)
